ヒント文字を大きく表示するようにした

--- a/emacs/myinit.org
+++ b/emacs/myinit.org
@@ -225,6 +225,9 @@ tree-based completion
         "C-'" avy-goto-char-timer
         "C-;" avy-goto-word-1
         ))
+    (custom-set-faces
+     '(avy-lead-face ((t (:height 1.5))))
+     '(avy-lead-face-0 ((t (:height 1.5)))))
     (avy-setup-default)
     )
 #+END_SRC
