--- a/emacs/myinit.org
+++ b/emacs/myinit.org
@@ -654,7 +654,7 @@ Recentf extensions
 ** faces
 #+BEGIN_SRC emacs-lisp
   (when (eq mahori:system-name-without-domain 'rigel)
-    (set-face-attribute 'default nil :family "Ricty Diminished" :height 160))
+    (set-face-attribute 'default nil :family "Ricty" :height 160))
 #+END_SRC
 ** mwheel
 #+BEGIN_SRC emacs-lisp
